force-app/main/default/objects/ProdVarMeanings__c/ProdVarMeanings__c.object-meta.xml
<CustomObject>
    <label>Prod Var Meaning</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProdVarMeanings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>