force-app/main/default/objects/ProdVarMeanings__c/fields/MeaningType__c.field-meta.xml
<CustomField>
    <fullName>MeaningType__c</fullName>
    <label>Meaning Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProdMeaningTypes</valueSetName>
    </valueSet>
</CustomField>