force-app/main/default/objects/ProdVarMeanings__c/fields/ProdCharacteristics__c.field-meta.xml
<CustomField>
    <fullName>ProdCharacteristics__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prod Characteristics</label>
    <referenceTo>ProductCharacteristics__c</referenceTo>
    <relationshipLabel>ProdVarMeanings</relationshipLabel>
    <relationshipName>ProdVarMeanings</relationshipName>
    <type>Lookup</type>
</CustomField>