force-app/main/default/objects/ProdVarMeanings__c/fields/VarKey__c.field-meta.xml
<CustomField>
    <fullName>VarKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>VarKey</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>