force-app/main/default/objects/ProdVarMeanings__c/fields/VarMeaning__c.field-meta.xml
<CustomField>
    <fullName>VarMeaning__c</fullName>
    <label>Var Meaning</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MeaningType__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>VarMeanings</valueSetName>
    </valueSet>
</CustomField>