force-app/main/default/objects/ProdVarMeanings__c/fields/VarValueNumber__c.field-meta.xml
<CustomField>
    <fullName>VarValueNumber__c</fullName>
    <label>Var Value (Number)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>