force-app/main/default/objects/ProdVarMeanings__c/fields/VarValueText__c.field-meta.xml
<CustomField>
    <fullName>VarValueText__c</fullName>
    <label>Var Value (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>