force-app/main/default/objects/ProdVarMeanings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MeaningType__c</columns>
    <columns>ProdCharacteristics__c</columns>
    <columns>VarMeaning__c</columns>
    <columns>VarValueNumber__c</columns>
    <columns>VarValueText__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>